--- a/html/banner-3.html
+++ b/html/banner-3.html
@@ -13,7 +13,7 @@
         </header>
 
         <section class="preview-area">
-            <h3 class="sub-title">preview</h3>
+            <h3 class="section-title">preview</h3>
             <div class="grid-box">
                 <div class="main_banner_area">
                     <img class="img-width" src="../images/banner/main_banner_2.jpg" alt="메인 스타일 배너 이미지-추석 이벤트">
@@ -30,7 +30,8 @@
             </div>
         </section>
 
-        <section>
+        <section class="section__cont">
+            <h3 class="section-title">detail</h3>
             <h3 class="sub-title">square banner</h3>
             <div class="default-banner">
                 <div class="img-area"></div>
@@ -54,6 +55,14 @@
                 <img class="img-width" src="../images/banner/detail_banner_2.jpg" alt="이벤트 상세 페이지-추석 이벤트">
             </div>
         </section>
+
+        <footer class="footer">
+            <p>Haein_Design_Portfolio</p>
+        </footer>
+
+        <div id="bg"></div>
     </div>
+
+    <script src="../script/banner-script.js"></script>
 </body>
 </html>
