--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             </div>
             <ul>
                 <li><a class="btn" href="html/portfolio.html">포트폴리오 바로가기</a></li>
-                <li class="half-list"><a class="btn" href="https://blog.naver.com/godls2213" target="_blank">네이버 블로그 바로가기</a></li>
-                <li class="half-list"><a class="btn" href="https://haepppy.github.io/" target="_blank">깃허브 블로그 바로가기</a></li>
+                <ul class="flex-box">
+                    <li class="half-list"><a class="btn" href="https://blog.naver.com/godls2213" target="_blank">네이버 블로그 바로가기</a></li>
+                    <li class="half-list"><a class="btn" href="https://haepppy.github.io/" target="_blank">깃허브 블로그 바로가기</a></li>
+                </ul>
+                
             </ul>
         </div>
     </div>
