--- a/html/banner-1.html
+++ b/html/banner-1.html
@@ -13,7 +13,7 @@
         </header>
 
         <section class="preview-area">
-            <h3 class="sub-title preview-title">preview</h3>
+            <h3 class="section-title">preview</h3>
             <div class="grid-box">
                 <div class="main_banner_area">
                     <img class="img-width" src="../images/banner/main_banner_4.jpg" alt="메인 스타일 배너-꽃박람회">
@@ -31,6 +31,7 @@
         </section>
 
         <section class="section__cont">
+            <h3 class="section-title">detail</h3>
             <h3 class="sub-title">square banner</h3>
             <div class="default-banner">
                 <div class="img-area"></div>
@@ -61,6 +62,14 @@
             </div>
             
         </section>
+
+        <footer class="footer">
+            <p>Haein_Design_Portfolio</p>
+        </footer>
+
+        <div id="bg"></div>
     </div>
+
+    <script src="../script/banner-script.js"></script>
 </body>
 </html>
