--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Prologue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="script/jquery-3.6.0.min.js"></script>
-    <script src="script/common.js"></script>
     <link rel="stylesheet" href="css/prologue.css">
 </head>
 <body>
@@ -20,9 +18,16 @@
                     <li class="half-list"><a class="btn" href="https://blog.naver.com/godls2213" target="_blank">네이버 블로그 바로가기</a></li>
                     <li class="half-list"><a class="btn" href="https://haepppy.github.io/" target="_blank">깃허브 블로그 바로가기</a></li>
                 </ul>
-                
             </ul>
         </div>
+        <div class="notice">
+            <p>
+                본 포트폴리오 페이지는 PC 전용으로 제작되었음을 알립니다.
+            </p>
+        </div>
     </div>
+    
+    <script src="script/jquery-3.6.0.min.js"></script>
+    <script src="script/common.js"></script>
 </body>
 </html>
